--- a/README
+++ b/README
@@ -10,4 +10,8 @@ TODO
 2. Get cairo and lua to work for the analog clock
 3. Add Rss and weather scripts(Not sure about the weather script since i have weather indicator anyway)
 
+CREDITS
+1. To http://www.kontrapunkt.com/ for the font used.
+
+
 
